infra/authz-adapter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz-stack
  namespace: authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authz
  template:
    metadata:
      labels:
        app: authz
    spec:
      serviceAccountName: default

      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.29-latest
          args: ["-c", "/etc/envoy/envoy-config.yaml"]
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: envoy-tls
              mountPath: /etc/certs
            - name: envoy-config
              mountPath: /etc/envoy

        - name: adapter
          image: authz-adapter:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          env:
            - name: KETO_ADMIN_URL
              value: "http://172.30.176.1:4466"
              
            # - name: KRATOS_ADMIN_TOKEN
            #   valueFrom:
            #     secretKeyRef:
            #       name: kratos-admin-token
            #       key: admin_token

            # - name: KETO_ADMIN_TOKEN
            #   valueFrom:
            #     secretKeyRef:
            #       name: keto-admin-token
            #       key: admin_token

          # volumeMounts:
          #   - name: vault-secrets
          #     mountPath: "/mnt/secrets"
          #     readOnly: true

      volumes:
        - name: envoy-tls
          secret:
            secretName: envoy-tls

        - name: envoy-config
          configMap:
            name: envoy-config

        # - name: vault-secrets
        #   csi:
        #     driver: secrets-store.csi.k8s.io
        #     readOnly: true
        #     volumeAttributes:
        #       secretProviderClass: "scansure-vault-secret"
